# OldSlavicLemma

./: README.MD  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: static.yml
oldslaviclemmatrain/: architecture.py  cli.py  conllu.py  dataset.py  examples.py  exporter.py  trainer.py  vocab.py
